fix: text was overlapping elements

--- a/src/components/menu-component/menu-component.module.scss
+++ b/src/components/menu-component/menu-component.module.scss
@@ -8,7 +8,6 @@
   position: absolute;
   transform: translateX(-120%);
   transition: ease-out 0.5s;
-  z-index: 100;
 }
 
 .menu_container__active {
@@ -77,6 +76,7 @@
 @media (max-width: 767px) {
   .menu_container {
     justify-content: flex-start;
+    transform: translateX(-200%);
   }
 
   .menu_container__active {
